fix : cookie 모바일 오류 해결 6